fix(skainet-cli): dequantize at load time when Vector API is unavailable
Q4_0/Q8_0 packed-MemSeg dispatch (DecoderGgufMemSegConverter +
chooseQuantizedMatmul + lazy-transpose) lives entirely in
DefaultCpuOpsJvm. When PlatformCpuOpsFactory falls back to
DefaultCpuOpsBase — older JDK, missing `--add-modules
jdk.incubator.vector`, or platforms where the Vector API intrinsic
isn't backed (notably some macOS JDK builds) — the base class's
`transpose` slow path runs `factory.init(...)` over a Q8 byte-store
and ClassCasts Byte→Float at the first attention projection.

Detect the situation at startup by introspecting `ctx.ops::class`,
warn about the ~4x memory hit, and pass `QuantPolicy.DEQUANTIZE_TO_FP32`
to the loader so weights land as plain FP32 — every op route then
works regardless of which CPU ops backend is active.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>